[project]
name = "wab-hello-world"
version = "1.0.0"
description = "Simple hello world service"
authors = [
    {name = "Laura", email = "xmolnar3@mendelu.cz"},
]
dependencies = [
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
test = "pytest"
